# Vision

./: .gitignore  .~lock.Assignment3_ComputerVision_Report.docx#
CameraCalibration/: CMakeCache.txt  CMakeLists.txt  Calibration  ImageListCreator  Makefile  calibration.cpp  camera.yml~  cmake_install.cmake  cppInterface  imagelist.yaml  imagelist_creator.cpp  main.cpp
CameraCalibration/Course_Material/: MINES-VIS2015 CameraCalib.pptx
CameraCalibration/resources/: imagelist.yaml
CannyDetection/: .~lock.MINES-VIS2015 Edges.pptx#  MINES-VIS2015 Edges.pptx  cppInterface  main.cpp
Hand_Detection/: .~lock.MINES-VIS2015 Convexity Handdetect.pptx#  CMakeCache.txt  Makefile  cmake_install.cmake  cppInterface  main.cpp
Hough_Transform/: CMakeCache.txt  MINES-VIS2015 week 4.pptx  Makefile  cmake_install.cmake  cppInterface  detectLines  main.cpp
Least_Square_Estimation/: CMakeCache.txt  Makefile  backupLeastSquare.cpp  cmake_install.cmake  cppInterface  data.txt  main.cpp
Object_Distance_from_Camera_Origin/: Assignment  Assignment11_ComputerVision_Report.docx  CMakeLists.txt  main.cpp  out_camera_data.yml
Object_Orientation/: .~lock.Assignment3_ComputerVision_Report.docx#  CMakeCache.txt  Makefile  cmake_install.cmake  cppInterface  main.cpp
Object_Tracking/: .~lock.MINES-VIS2015 Obj tracking.pptx#  Assignment5_ComputerVision_Report.docx  CMakeCache.txt  Makefile  cmake_install.cmake  cppInterface  main.cpp
stiching/: .~lock.Assignment5_ComputerVision_Report.docx#  Assignment5_ComputerVision_Report.docx  CMakeCache.txt  Makefile  cmake_install.cmake  cppInterface  (+1 more)
(+23 files in other folders)
